# atl.chat

./: .cursorignore  .dockerignore  .env.dev.example  .env.example  .gitignore  .gitleaks.toml  .gitmodules  .luacheckrc  .releaserc.json  .yamllint  AGENTS.md  CHANGELOG.md  Containerfile  LICENSE  NPM_SETUP.md  README.md  TODO.md  commitlint.config.mjs  compose.dev-override.yaml  compose.prod-override.yaml  compose.yaml  config.example.yaml  config.template.yaml  docker-compose.yml  justfile  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json  wrangler.toml
.cursor/plans/: agents.md_audit_plan_0e4a4132.plan.md  atl.chat_codebase_architecture_audit_a6482578.plan.md  bridge_codebase_architecture_audit_24b32b4a.plan.md  custom_discord_irc_xmpp_bridge_0068eac0.plan.md  flatten_apps_structure_0790d58e.plan.md  the_lounge_integration_3ba6e863.plan.md
.github/scripts/: docker.sh
.github/workflows/: bridge-ci.yml  bridge-docker.yml  ci.yml  docker-push.yml  docker.yml  lint.yml  maintenance.yml  pr-title.yml  security.yml
app/: globals.css  layout.tsx  page.tsx
apps/atheme/: AGENTS.md  AUDIT_REPORT.md  Containerfile  docker-entrypoint.sh
apps/atheme/config/: atheme.conf.template
apps/biboumi/: README.md  compose.yaml
apps/bridge/: AGENTS.md  AUDIT.md  CHANGELOG.md  Containerfile  README.md  TODO.md  compose.yaml  config.example.yaml  config.template.yaml  justfile  lefthook.yml  pyproject.toml
apps/bridge/docs/: xmpp-muc-nick-findings.md
apps/bridge/src/: AGENTS.md
apps/bridge/tests/: AGENTS.md  README.md  test_config.py  test_content_filter.py  test_discord_adapter.py  test_error_handling.py  test_formatting.py  test_httpx_exceptions.py  test_identity.py  test_identity_extended.py  test_irc_adapter.py  test_irc_adapter_extended.py  test_irc_client.py  test_irc_exceptions.py  test_irc_puppet.py  test_main.py  test_message_replies.py  test_message_verification.py  test_property_based.py  test_relay.py  test_relay_extended.py  test_retry_logic.py  test_router.py  test_xmpp_adapter.py  test_xmpp_component.py  test_xmpp_component_outbound.py  test_xmpp_msgid.py
apps/docs/: AGENTS.md  package.json
apps/fluux-messenger/: AGENTS.md  docker-entrypoint.sh  nginx-plain.conf.template  nginx-tls.conf.template
apps/gamja/: AGENTS.md  Containerfile
apps/irc/: README.md  TODO.md  compose.yaml  justfile  package.json  pyproject.toml
apps/irc/scripts/: health-check.sh  init.sh  prepare-config.sh  ssl-manager.sh
apps/irc/services/atheme/config/: atheme.conf.template
apps/irc/services/unrealircd/: Containerfile  README-third-party-modules.md
apps/irc/services/unrealircd/config/: unrealircd.conf.template
apps/irc/services/unrealircd/scripts/: generate-oper-password.sh  module-config.sh
apps/irc/src/backend/atheme/: Containerfile
apps/irc/src/backend/unrealircd/: Containerfile
apps/irc/tests/: conftest.py
apps/irc/tests/e2e/: test_e2e_workflow.py
apps/irc/tests/integration/: test_infrastructure.py
apps/irc/tests/legacy/integration/: test_configuration_validation.py  test_scripts.py  test_ssl_management.py
apps/irc/tests/unit/: test_configuration.py  test_environment_validation.py
apps/matterbridge/: Containerfile  README.md  compose.yaml
apps/obsidianirc/: AGENTS.md  Containerfile  README.md  justfile
apps/prosody/: AGENTS.md  Containerfile  docker-entrypoint.sh  justfile  modules.list
apps/prosody/config/: prosody.cfg.lua
apps/thelounge/: AGENTS.md
apps/unrealircd/: AGENTS.md  Containerfile  docker-entrypoint.sh  justfile  third-party-modules.list
apps/unrealircd/config/: unrealircd.conf.template
apps/unrealircd/scripts/: generate-oper-password.sh  manage-modules.sh
apps/web/: .env.example  AGENTS.md  next.config.mjs  package-lock.json  package.json
apps/webpanel/: AGENTS.md  Containerfile
apps/xmpp/: README.env.md  README.md  compose.yaml  docker-compose.yml  justfile  package.json
docs/: AGENTS.md  README.md  config-audit-report.md  deployment.md
docs/architecture/: README.md  ci-cd.md  new-service.md
docs/audits/: dev-prod-lifecycle-audit.md  env-var-audit.md  prosody-config-audit.md  unrealircd-config-audit.md
docs/bridges/: README.md
docs/examples/: cloudflare-credentials.ini.example  nginx-docker.conf  nginx-docker.dev.conf  prometheus-scrape-config.yml
docs/infra/: containerization.md  data-structure.md  networking.md  ssl.md
docs/onboarding/: README.md
docs/services/: MODULES.md
infra/: AGENTS.md  README.md
infra/compose/: bridge.yaml  cert-manager.yaml  fluux-messenger.yaml  irc.yaml  obsidianirc.yaml  thelounge.yaml  xmpp.yaml
infra/nginx/: Dockerfile  docker-entrypoint.sh  prosody-https.conf.template
lib/atl_common/: __init__.py
lib/atl_docker/: __init__.py
lib/atl_testing/: __init__.py
lib/scripts/: README.md
scripts/: AGENTS.md  gencloak-update-env.sh  init.sh  prepare-config.sh
scripts/cert-manager/: run.sh
src/: AGENTS.md
src/bridge/: __main__.py  config.py  events.py  identity.py
tests/: AGENTS.md  conftest.py  harness.py  mocks.py  test_avatar_sync.py  test_bus.py  test_config.py  test_discord_adapter.py  test_edge_cases.py  test_error_handling.py  test_events.py  test_file_transfers.py  test_formatting.py  test_gateway.py  test_httpx_exceptions.py  test_identity.py  test_identity_extended.py  test_irc_adapter.py  test_irc_adapter_extended.py  test_irc_client.py  test_irc_exceptions.py  test_irc_message_split_utf8.py  test_irc_msgid.py  test_irc_puppet.py  test_irc_threading.py  test_main.py  test_message_formatting.py  test_message_ordering.py  test_message_replies.py  test_message_verification.py  test_performance.py  test_presence_events.py  test_property_based.py  test_relay.py  test_relay_extended.py  test_retry_logic.py  test_router.py  test_xmpp_adapter.py  test_xmpp_component.py  test_xmpp_component_outbound.py  (+2 more)
tests/e2e/: test_e2e_workflow.py
tests/integration/: test_clients.py  test_infrastructure.py
tests/unit/: test_bridge_compose_env_coverage.py  test_configuration.py  test_env_registry_completeness.py
(+198 files in other folders)
