[project]
name = "atl-chat-irc"
version = "0.1.0"
description = "IRC Service for atl.chat"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "psutil>=5.9.0",
    "irc>=20.5.0",
    "irc-toolkit>=0.2.0",
    "pydle>=1.1.0",
    "unrealircd-rpc-py>=2.0.0",
    "websocket-client>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend/atheme", "src/backend/unrealircd"]
